[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/img/ui/upgrade.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/TimeFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/UbuntuMono-R.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/drop_area/DropArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/screens/ToolBench.gd" type="Script" id=5]
[ext_resource path="res://scenes/screens/UpgradeScript.gd" type="Script" id=6]
[ext_resource path="res://scenes/ui/Money.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="UpgradeScreen" type="Node2D"]
script = ExtResource( 6 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 375, 667 )
texture = ExtResource( 1 )

[node name="Money" type="Label" parent="."]
margin_left = 492.0
margin_top = 1238.0
margin_right = 708.0
margin_bottom = 1289.0
rect_pivot_offset = Vector2( 621.451, 310.514 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.521569, 0.596078, 0.843137, 1 )
text = "0"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 376.0
margin_top = 40.0
margin_right = 711.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 67.7927, 195.934 )
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolBench" type="Node2D" parent="."]
position = Vector2( 375, 916 )
script = ExtResource( 5 )

[node name="DropArea" parent="ToolBench" instance=ExtResource( 4 )]
scale = Vector2( 3, 2.5 )

[node name="RepairButton" type="Button" parent="ToolBench"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 0.999969
margin_top = -477.862
margin_right = 336.0
margin_bottom = -418.862
rect_pivot_offset = Vector2( 67.7927, 195.934 )
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwapButton" type="Button" parent="ToolBench"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 0.999969
margin_top = -378.533
margin_right = 336.0
margin_bottom = -319.533
rect_pivot_offset = Vector2( 67.7927, 195.934 )
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton" type="Button" parent="ToolBench"]
margin_left = -273.682
margin_top = -409.13
margin_right = -115.682
margin_bottom = -349.838
custom_fonts/font = SubResource( 1 )
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="drop_item" from="ToolBench/DropArea" to="ToolBench" method="_on_DropArea_drop_item"]
[connection signal="pressed" from="ToolBench/RepairButton" to="ToolBench" method="_on_RepairButton_pressed"]
[connection signal="pressed" from="ToolBench/SwapButton" to="ToolBench" method="_on_SwapButton_pressed"]
[connection signal="pressed" from="ToolBench/UpgradeButton" to="ToolBench" method="_on_UpgradeButton_pressed"]
